--- a/index (2).html
+++ b/index (2).html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="./ass.css">
+        <link rel="stylesheet" href="./style.css">
         <style>
             #kec
             {
